--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello_nest",
+  "name": "hr_management_server",
   "version": "0.0.1",
   "description": "",
   "author": "Areo Benjamen",
@@ -27,10 +27,15 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.0",
+    "@nestjs/typeorm": "^10.0.2",
     "@types/hapi__joi": "^17.1.14",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.2.0",
     "run-script-webpack-plugin": "^0.2.0",
     "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20",
     "webpack": "^5.90.2",
     "webpack-node-externals": "^3.0.0"
   },
